--- a/css/_broadcast.css
+++ b/css/_broadcast.css
@@ -11,7 +11,6 @@
 .broadcast__content {
   width: 100%;
   justify-content: space-between;
-  flex-wrap: wrap;
 }
 
 .broadcast__autors-wrap {
@@ -19,18 +18,6 @@
   justify-content: space-between;
   width: 100%;
   max-width: 255px;
-  max-height: 350px;
-}
-
-.broadcast__archive {
-  order: 1;
-  width: 100%;
-  max-width: 255px;
-  margin-top: -215px;
-  padding-top: 113px;
-  background-image: url("../img/broadcast-mic.png");
-  background-repeat: no-repeat;
-  background-position: top left;
 }
 
 .broadcast__select-label {
@@ -139,6 +126,17 @@
 
 .broadcast__item:hover .broadcast__img-wrap {
   opacity: 0.7;
+}
+
+.broadcast__archive {
+  padding-top: 113px;
+  background-image: url("../img/broadcast-mic.png");
+  background-repeat: no-repeat;
+  background-position: top left;
+}
+
+.broadcast__archive--media {
+  display: none;
 }
 
 .broadcast__btn {
