--- a/css/media.css
+++ b/css/media.css
@@ -67,12 +67,142 @@
     margin-bottom: 20px;
   }
 
-  /*podcsts*/
+  /*podcasts*/
 
   .podcasts {
     padding-top: 92px;
   }
 
+  /*broadcasts*/
+
+  .broadcast {
+    padding-bottom: 96px;
+  }
+
+  .broadcast__autors-wrap {
+    max-height: 564px;
+    margin-right: 15px;
+  }
+
+  .broadcast__list {
+    width: calc(540 / 828 * 100%);
+  }
+
+  .broadcast__item {
+    width: 47%;
+    margin-bottom: 30px;
+  }
+
+  /*guests*/
+
+  .guests__text {
+    max-width: 536px;
+  }
+
+  .guests__item-content-wrap {
+    columns: 3;
+    padding-bottom: 20px;
+    order: 10;
+  }
+
+  .guests__tabs {
+    order: -10;
+  }
+
+  .tab-btn {
+    margin-bottom: 14px;
+  }
+
+  .guests__tabs-content {
+    max-width: 255px;
+  }
+
+  .guests__socials-item {
+    margin-right: 35px;
+  }
+
+  .guests__photo-wrap {
+    display: block;
+    margin-bottom: 5px;
+  }
+
+  .guests__ether {
+    display: inline-block;
+    padding: 12px 18px;
+    font-weight: var(--medium);
+    font-size: 16px;
+    line-height: 16px;
+    color: var(--lightViolet);
+    border: 2px solid var(--lightViolet);
+    border-radius: 77px;
+  }
+
+  /*playlists*/
+
+  .playlists {
+    padding-bottom: 89px;
+  }
+
+  .playlists-container {
+    flex-direction: column;
+  }
+
+  .playlists__content {
+    max-width: 325px;
+  }
+
+  .playlists__checkbox-list {
+    columns: 2;
+    column-gap: 1em;
+    margin-bottom: 10px;
+    border-bottom: none;
+  }
+
+  .playlists__checkbox-item {
+    margin-bottom: 25px;
+  }
+
+  .playlists__checkbox-wrap {
+    padding-left: 42px;
+  }
+
+  .playlists__warning-wrap {
+    display: none;
+  }
+
+  .playlists__warning-wrap--media {
+    display: block;
+  }
+
+  .playlists__list {
+    justify-content: space-between;
+    padding-bottom: 10px;
+    width: 100%;
+    margin-top: 0;
+    margin-bottom: 37px;
+    border-bottom: 1px solid var(--gray);
+  }
+
+  .playlists__item {
+    display: flex;
+    flex-direction: row;
+    width: calc((100% - 60px) / 3);
+    max-width: unset;
+    margin-bottom: 30px;
+  }
+
+  .playlists__img-wrap {
+    flex-shrink: 0;
+  }
+
+  .playlists__item-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    max-height: 112px;
+    padding: 10px 5px 10px 10px;
+  }
 }
 
 @media (max-width: 962px) {
@@ -161,6 +291,118 @@
   }
 
   .podcasts__item {
+    width: 100%;
+  }
+
+  /* broadcasts*/
+
+  .broadcast {
+    position: relative;
+    padding-bottom: 28px;
+  }
+
+  .broadcast__content {
+    flex-direction: column;
+  }
+
+  .broadcast__list {
+    justify-content: space-between;
+    width: 100%;
+    max-width: 540px;
+    margin-bottom: 60px;
+    margin-top: 45px;
+  }
+
+  .broadcast::after {
+    content: "";
+    position: absolute;
+    bottom: 157px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: var(--lightGray);
+  }
+
+  .broadcast__item {
+    flex-grow: 0;
+    width: calc(255 / 540 * 100%);
+    margin-right: 0;
+  }
+
+  .broadcast__card-content {
+    max-height: 112px;
+  }
+
+  .broadcast__img-wrap {
+    height: auto;
+    max-height: 148px;
+    margin-bottom: 0;
+  }
+
+  .broadcast__more svg{
+    flex-shrink: 0;
+  }
+
+  .broadcast__archive {
+    display: none;
+  }
+
+  .broadcast__archive--media {
+    display: block;
+    align-self: center;
+    max-width: 365px;
+    padding-top: 0;
+    padding-left: 88px;
+    margin-left: 30px;
+    background-position: left center;
+  }
+
+  .broadcast__btn {
+    padding: 10px 50px;
+    margin-bottom: 8px;
+  }
+
+  /*guests*/
+
+  .guests__content{
+    flex-direction: column;
+  }
+
+  .accordion-container {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+
+  .guests__item-content-wrap {
+    padding-bottom: 4px;
+  }
+
+  .tab-btn {
+    margin-bottom: 28px;
+  }
+
+  .guests__tabs-content {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .guests__photo-wrap {
+    margin-bottom: 10px;
+  }
+
+  .guests__socials {
+    margin-bottom: 10px;
+  }
+
+  .guests__descr {
+    max-width: 398px;
+  }
+
+  .guests__ether {
+    padding: 10px 18px;
+  }
+
+  .guests__tabs-item {
     width: 100%;
   }
 }
@@ -363,6 +605,13 @@
     margin-bottom: 0;
   }
 
+  /*broadcasts*/
+
+  .broadcast {
+    padding-top: 54px;
+    padding-bottom: 29px;
+  }
+
 }
 
 @media (max-width: 610px) {
@@ -415,4 +664,162 @@
     font-size: 16px;
     line-height: 16px;
   }
+
+  /* broadcasts*/
+
+  .broadcast::after {
+    bottom: 163px;
+  }
+
+  .broadcast__title {
+    display: block;
+    font-size: 24px;
+    line-height: 100%;
+  }
+
+  .broadcast__select-label {
+    font-size: 12px;
+    line-height: 12px;
+  }
+
+  .broadcast__list {
+    justify-content: space-between;
+    padding-bottom: 0;
+    margin-top: 24px;
+    margin-bottom: 30px;
+  }
+
+  .broadcast__item {
+    width: 44%;
+    height: auto;
+  }
+
+  .broadcast__img-wrap {
+    display: block;
+    height: auto;
+  }
+
+  .broadcast__card-content {
+    margin-top: -5px;
+    min-height: 99px;
+    padding: 10px;
+  }
+
+  .broadcast__name {
+    font-size: 12px;
+    line-height: 12px;
+  }
+
+  .broadcast__announce {
+    font-size: 9px;
+    line-height: 9px;
+  }
+
+  .broadcast__more {
+    font-size: 12px;
+    line-height: 12px;
+  }
+
+  .broadcast__archive--media {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-left: 0;
+    background-image: url("../img/broadcast-mic.png");
+    background-size: contain;
+  }
+
+  .broadcast__archive-hint {
+    margin-bottom: 7px;
+    font-size: 14px;
+    line-height: 150%;
+  }
+
+  .broadcast__btn {
+    max-width: 110px;
+    padding: 8px 31px;
+    margin-bottom: 0;
+  }
+
+  /*guests*/
+
+  .guests {
+    padding-top: 54px;
+    padding-bottom: 54px;
+  }
+
+  .guests__title {
+    font-size: 24px;
+    line-height: 100%;
+  }
+
+  .guests__enumeration {
+    margin-bottom: 0;
+    font-size: 14px;
+    line-height: 150%;
+  }
+
+  .guests__text {
+    font-size: 14px;
+    line-height: 160%;
+    margin-bottom: 28px;
+  }
+
+  .guests__accordion {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 30px;
+  }
+
+  .acordeon__item--historians {
+    order: -1;
+  }
+
+  .acordeon__item--blogers {
+    display: none;
+  }
+
+  .guests__item-content-wrap {
+    padding: 20px 0 0;
+    margin-right: -18px;
+    margin-bottom: -16px;
+    columns: 2;
+    column-gap: 1em;
+  }
+
+  .acordeon__btn {
+    padding: 18px 30px 17px 0;
+    font-size: 16px;
+    line-height: 16px;
+  }
+
+  .acordeon__btn::after {
+    width: 30px;
+    height: 30px;
+  }
+
+  .tabs__item {
+    margin-right: 18px;
+
+  }
+
+  .tab-btn {
+    max-width: 80px;
+    margin-bottom: 30px;
+    font-size: 14px;
+    line-height: 110%;
+  }
+
+  .guests__socials-item {
+    margin-right: 29px;
+  }
+
+  .guests__socials-link svg{
+    width: 30px;
+    height: 30px;
+  }
+
+  .guests__ether {
+    padding: 9px 14px;
+  }
+
 }
