--- a/css/style.css
+++ b/css/style.css
@@ -7,4 +7,6 @@
 @import url("_podcasts.css");
 @import url("_broadcast.css");
 @import url("_guests.css");
-@import url("_playlists.css")
+@import url("_playlists.css");
+@import url("_market.css");
+@import url("_about.css")
