--- a/css/_playlists.css
+++ b/css/_playlists.css
@@ -85,7 +85,7 @@
   display: flex;
   flex-direction: column;
   width: calc(160 / 730 * 100%);
-  margin-bottom: 27px;
+  margin-bottom: 30px;
   flex-grow: 0;
 }
 
@@ -119,7 +119,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 16px;
+  padding: 20px 16px 16px 16px;
   border: 1px solid var(--lightGray);
   background-color: transparent;
   transition: background-color 0.2s ease-in-out;
