--- a/css/style.css
+++ b/css/style.css
@@ -9,4 +9,5 @@
 @import url("_guests.css");
 @import url("_playlists.css");
 @import url("_market.css");
-@import url("_about.css")
+@import url("_about.css");
+@import url("_footer.css")
