--- a/css/media.css
+++ b/css/media.css
@@ -36,11 +36,15 @@
     padding-top: 35px;
   }
 
+  .header__nav-wrap {
+    margin-right: 30px;
+  }
+
   .subheader__menu {
     margin-right: 34px;
   }
 
-  .subheder__item:not(:last-child) {
+  .subheader__item:not(:last-child) {
     margin-right: 25px;
   }
 
@@ -251,7 +255,7 @@
 
   .about__descr {
     padding-right: calc(285 / 823 * 100%);
-    margin-bottom: 30px;
+    margin-bottom: 27px;
   }
 
   .about__slider-wrap {
@@ -293,7 +297,6 @@
     display: block;
     columns: 2;
     width: 100%;
-    /* max-width: 265px; */
   }
 
   .header__nav-wrap {
@@ -303,7 +306,7 @@
     left: 0;
     height: 100vh;
     transform: translateY(-200%);
-    transition: transform 0.4s ease-in-out;
+    /* transition: transform 0.4s ease-in-out; */
   }
 
   .header__nav {
@@ -314,7 +317,7 @@
     padding-top: 106px;
     padding-left: 114px;
     padding-right: 40%;
-    padding-bottom: auto;
+    padding-bottom: 0;
     background-color: var(--menuGray);
   }
 
@@ -525,7 +528,7 @@
   .about__descr {
     padding-right: 0;
     padding-bottom: 142px;
-    margin-bottom: 32px;
+    margin-bottom: 27px;
   }
 
   .about__slider-wrap {
@@ -547,6 +550,56 @@
 
   .swiper-button-prev {
     top: 35%;
+  }
+
+  /*footer*/
+
+  .footer {
+    padding-bottom: 90px;
+  }
+
+  .footer__container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer__logo{
+    margin-top: 5px;
+    margin-bottom: 15px;
+  }
+
+  .footer__socials-list {
+    padding-left: 5px;
+    padding-right: 5px;
+    justify-content: space-between;
+  }
+
+  .footer__socials-item:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 75px;
+  }
+
+  .footer__socials-svg {
+    width: 36px;
+    height: 36px;
+  }
+
+  .footer__nav {
+    width: 100%;
+    align-self: flex-start;
+  }
+
+  .footer__nav-list {
+    padding-top: 0;
+    column-gap: 10.5em;
+  }
+
+  .footer__nav-item {
+    margin-right: 0;
+  }
+
+  .footer__nav-item:not(:nth-child(3n)) {
+    margin-bottom: 28px;
   }
 }
 
@@ -603,6 +656,17 @@
     margin-right: 0;
   }
 
+  .header__nav {
+    min-width: 320px;
+    padding: 61px 32px 0 32px;
+    height: 50vh;
+    overflow-y: scroll;
+  }
+
+  .header__item:nth-child(4){
+    margin-top: 30px;
+  }
+
   .subheader__menu {
     display: none;
   }
@@ -611,15 +675,21 @@
     display: none;
   }
 
-  .subheader__menu--media {
+  .subheader-menu--media {
     display: block;
     max-width: unset;
     margin: 0;
-    width: 100%;
-    height: 37%;
-    column-count: 2;
+    width: 100vw;
+    min-width: 320px;
+    height: 50vh;
+    columns: 2;
     padding: 30px 32px;
     background-color: white;
+    overflow-y: scroll;
+  }
+
+  .subheader__item{
+    margin-bottom: 30px;
   }
 
   .subheader__nav {
@@ -775,6 +845,63 @@
 
   .swiper-button-next {
     display: none;
+  }
+
+  /*footer*/
+
+  .footer {
+    padding-top: 51px;
+    padding-bottom: 20px;
+  }
+
+  .footer__socials-list {
+    max-height: 90px;
+  }
+
+  .footer__container {
+    position: relative;
+    position: static;
+    z-index: -10;
+  }
+
+  .footer__nav {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+    width: 100%;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+
+  .footer__nav::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: -32px;
+    right: -32px;
+    bottom: 0;
+    background-color: var(--black);
+  }
+
+  .footer__nav-list {
+    max-width: 270px;
+    columns: 2;
+    column-gap: 5em;
+  }
+
+  .footer__nav-item:not(:nth-child(3n)) {
+    margin-bottom: 19px;
+  }
+
+  .footer__nav-item:nth-child(3n) {
+    margin-bottom: 15px;
+  }
+
+  .footer__nav-link {
+    font-size: 12px;
+    line-height: 12px;
   }
 }
 
@@ -1200,6 +1327,7 @@
 
   .about__slide-img-wrap {
     margin-bottom: 10px;
+    max-height: unset;
   }
 
   .about__slide-descr {
@@ -1248,7 +1376,6 @@
 
   .about__input {
     padding: 16px 23px;
-    /* margin-bottom: 30px; */
     font-size: 16px;
     line-height: 16px;
   }
@@ -1269,5 +1396,11 @@
     padding-left: 20px;
     font-size: 9px;
     line-height: 9px;
+  }
+
+  /*footer*/
+
+  .footer__nav {
+    justify-content: flex-start;
   }
 }
