--- a/css/_header.css
+++ b/css/_header.css
@@ -21,6 +21,7 @@
 
 .header_logo {
   height: 20px;
+  outline: none;
 }
 
 .header__nav-wrap {
@@ -181,6 +182,7 @@
 
 .subheader__link {
   color: var(--black);
+  outline: none;
 }
 
 .subheader__link:hover {
@@ -202,7 +204,7 @@
 
 .subheader__audio-item {
   width: 174px;
-  padding: 0 12px;
+  padding: 0 10px;
 }
 
 .subheader__audio-item:first-child {
@@ -215,10 +217,39 @@
 }
 
 .subheader__audio-btn {
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
   align-self: center;
+  margin-top: 4px;
   margin-right: 10px;
+  fill: var(--gray);
+  outline: none;
+  transition: fill 0.2s ease-in-out;
+}
+
+.subheader__audio-btn--active .subheader__audio-btn-svg--off{
+  display: none;
+}
+
+.subheader__audio-btn-svg--on {
+  display: none;
+}
+
+.subheader__audio-btn--active .subheader__audio-btn-svg--on{
+  display: inline-block;
+  flex-shrink: 0;
+}
+
+.subheader__audio-btn:hover {
+  fill: var(--violet);
+}
+
+.subheader__audio-btn:focus-visible {
+  fill: var(--lightViolet);
+}
+
+.subheader__audio-btn:active {
+  fill: var(--darkViolet);
 }
 
 .subheader__audio-text {
