--- a/css/_global.css
+++ b/css/_global.css
@@ -1,16 +1,19 @@
 html {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   scroll-behavior: smooth;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 img,
 svg {
+  -webkit-box-sizing: inherit;
   box-sizing: inherit;
   width: 100%;
 }
@@ -54,6 +57,8 @@ input::-webkit-search-results-decoration {
 }
 
 .flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex
 }
 
