modal window without hover effects

--- a/css/style.css
+++ b/css/style.css
@@ -10,4 +10,5 @@
 @import url("_playlists.css");
 @import url("_market.css");
 @import url("_about.css");
-@import url("_footer.css")
+@import url("_footer.css");
+@import url("modal.css");
