--- a/css/_global.css
+++ b/css/_global.css
@@ -85,4 +85,16 @@ input::-webkit-search-results-decoration {
 
 .stop-scroll {
   overflow: hidden;
+  pointer-events: none;
+}
+
+.stop-scroll::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: background-color 0.6s ease-in-out;
 }
