--- a/css/_about.css
+++ b/css/_about.css
@@ -7,6 +7,9 @@
 .about__descr {
   padding-right: calc(476 / 1110 * 100%);
   margin-bottom: 30px;
+  background-image: url("../img/about-frame.svg");
+  background-repeat: no-repeat;
+  background-position: right;
 }
 
 .about__title {
@@ -211,10 +214,14 @@
   position: relative;
 }
 
+.about__form-chekbox {
+  position: relative;
+}
+
 .js-validate-error-label {
   position: absolute;
-  top: 5px;
-  left: 23px;
+  top: 10px;
+  left: 33px;
   font-size: 10px;
   line-height: 10px;
 }
