--- a/css/_footer.css
+++ b/css/_footer.css
@@ -31,6 +31,24 @@
 .footer__socials-link {
   max-width: 24px;
   height: 100%;
+  outline: none;
+}
+
+.footer__socials-link svg {
+  fill: var(--menuGray);
+  transition: fill 0.2s ease-in-out;
+}
+
+.footer__socials-link:hover svg {
+  fill: var(--lightViolet);
+}
+
+.footer__socials-link:focus-visible svg {
+  fill: var(--lightViolet);
+}
+
+.footer__socials-link:active svg {
+  fill: var(--violet);
 }
 
 .footer__nav-list {
