--- a/css/media.css
+++ b/css/media.css
@@ -33,7 +33,7 @@
     align-items: center;
     z-index: 1;
     width: 100%;
-    padding-top: 35px;
+    padding-top: 40px;
   }
 
   .header__nav-wrap {
@@ -195,6 +195,16 @@
     margin-bottom: 30px;
   }
 
+  .playlists__item--rus::after {
+    right: unset;
+    left: 0;
+  }
+
+  .playlists__item--eng::after {
+    right: unset;
+    left: 0;
+  }
+
   .playlists__img-wrap {
     flex-shrink: 0;
   }
@@ -256,6 +266,7 @@
   .about__descr {
     padding-right: calc(285 / 823 * 100%);
     margin-bottom: 27px;
+    background-image: url("../img/about-frame1024.svg");
   }
 
   .about__slider-wrap {
@@ -282,11 +293,12 @@
   .hamburger {
     display: inline-block;
     z-index: 10;
+    pointer-events: auto;
   }
 
   .header__item {
     display: block;
-    margin-right: 48px;
+    margin-right: 20px;
   }
 
   .header__item:not(:last-child) {
@@ -296,17 +308,44 @@
   .header__menu {
     display: block;
     columns: 2;
+    column-gap: 10px;
     width: 100%;
   }
 
   .header__nav-wrap {
+    position: relative;
     position: absolute;
     z-index: 9;
     top: 58px;
     left: 0;
     height: 100vh;
+    pointer-events: auto;
     transform: translateY(-200%);
     /* transition: transform 0.4s ease-in-out; */
+  }
+
+  .header__nav-wrap::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 115px;
+    height: 300px;
+    background-image: url("../img/spiral.svg");
+    background-repeat: no-repeat;
+    background-position: top -114px;
+  }
+
+  .header__nav-wrap::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 150px;
+    width: 115px;
+    height: 300px;
+    background-image: url("../img/spiral.svg");
+    background-repeat: no-repeat;
+    background-position: top -114px;
   }
 
   .header__nav {
@@ -316,7 +355,7 @@
     margin-right: 0;
     padding-top: 106px;
     padding-left: 114px;
-    padding-right: 40%;
+    padding-right: 60%;
     padding-bottom: 0;
     background-color: var(--menuGray);
   }
@@ -332,6 +371,10 @@
   }
 
   .subheader__menu {
+    margin-right: 0;
+  }
+
+  .subheader__item {
     margin-right: 25px;
   }
 
@@ -342,6 +385,7 @@
   .subheader__audio-btn--media {
     display: block;
     flex-shrink: 0;
+    margin: 0;
   }
 
   /*hero*/
@@ -525,10 +569,17 @@
 
   /*about*/
 
+  .about__descr-container {
+    padding-left: 0;
+  }
+
   .about__descr {
     padding-right: 0;
+    padding-left: 114px;
     padding-bottom: 142px;
     margin-bottom: 27px;
+    background-image: url("../img/about-frame768.svg");
+    background-position: left bottom;
   }
 
   .about__slider-wrap {
@@ -654,6 +705,16 @@
 
   .header__search-btn {
     margin-right: 0;
+  }
+
+  .header__nav-wrap::after{
+    width: 0;
+    height: 0;
+  }
+
+  .header__nav-wrap::before{
+    width: 0;
+    height: 0;
   }
 
   .header__nav {
@@ -834,6 +895,16 @@
 
   /*about*/
 
+  .about__descr-container {
+    padding-left: 32px;
+  }
+
+  .about__descr {
+    padding-right: 0;
+    padding-left: 0;
+    background-image: none;
+  }
+
   .about__slide-img-wrap {
     height: auto;
     max-height: unset;
@@ -909,6 +980,12 @@
   .podcasts__item {
     height: auto;
     margin-bottom: 29px;
+  }
+
+  .podcasts__date {
+    position: absolute;
+    bottom: unset;
+    top: 0;
   }
 
   .podcasts__descr-wrap {
@@ -1219,6 +1296,16 @@
     margin-bottom: 30px;
   }
 
+  .playlists__item--rus::after {
+    right: 0;
+    left: unset;
+  }
+
+  .playlists__item--eng::after {
+    right: 0;
+    left: unset;
+  }
+
   .playlists__item-content {
     justify-content: flex-start;
     padding: 9px 8px;
@@ -1402,5 +1489,17 @@
 
   .footer__nav {
     justify-content: flex-start;
+  }
+
+  .footer__socials-list {
+    max-width: 150px;
+    padding-right: 0;
+    padding-left: 0;
+    margin-left: 5px;
+  }
+
+  .footer__socials-item {
+    display: block;
+    min-width: 36px;
   }
 }
