--- a/css/_global.css
+++ b/css/_global.css
@@ -88,7 +88,7 @@ input::-webkit-search-results-decoration {
   pointer-events: none;
 }
 
-.stop-scroll::before {
+/* .stop-scroll::before {
   content: "";
   position: fixed;
   top: 0;
@@ -97,4 +97,4 @@ input::-webkit-search-results-decoration {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   transition: background-color 0.6s ease-in-out;
-}
+} */
