--- a/css/modal.css
+++ b/css/modal.css
@@ -1,8 +1,24 @@
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0,0,0,0);
+  z-index: -1;
+  transition: background-color 0.4s ease-in-out, z-index 0.5s linear;
+}
+
+.popup--active {
+  z-index: 1000;
+  background-color: rgba(0,0,0,0.8);
+}
+
 .login {
   position: absolute;
   top: 80px;
   left: 50%;
-  z-index: 100;
+  z-index: 1000;
   display: flex;
   flex-direction: column;
   width: 824px;
