--- a/css/modal.css
+++ b/css/modal.css
@@ -3,13 +3,14 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 0;
   background-color: rgba(0,0,0,0);
   z-index: -1;
   transition: background-color 0.4s ease-in-out, z-index 0.5s linear;
 }
 
 .popup--active {
+  height: 100vh;
   z-index: 1000;
   background-color: rgba(0,0,0,0.8);
 }
